--- a/research/01_data_ingestion.ipynb
+++ b/research/01_data_ingestion.ipynb
@@ -17,7 +17,7 @@
     {
      "data": {
       "text/plain": [
-       "'e:\\\\Bappy\\\\Coding\\\\Youtube\\\\Office\\\\End-to-End-Wine-Quality-Prediction\\\\research'"
+       "'/Users/terox/Desktop/ML_PROJECT/End-to-end-Wine-Quality-Predictor/research'"
       ]
      },
      "execution_count": 2,
@@ -46,7 +46,7 @@
     {
      "data": {
       "text/plain": [
-       "'e:\\\\Bappy\\\\Coding\\\\Youtube\\\\Office\\\\End-to-End-Wine-Quality-Prediction'"
+       "'/Users/terox/Desktop/ML_PROJECT/End-to-end-Wine-Quality-Predictor'"
       ]
      },
      "execution_count": 4,
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,19 +174,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-10-07 11:43:43,401: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2024-10-07 11:43:43,407: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2024-10-07 11:43:43,408: INFO: common: yaml file: schema.yaml loaded successfully]\n",
-      "[2024-10-07 11:43:43,409: INFO: common: created directory at: artifacts]\n",
-      "[2024-10-07 11:43:43,410: INFO: common: created directory at: artifacts/data_ingestion]\n",
-      "[2024-10-07 11:43:44,775: INFO: 2366278714: artifacts/data_ingestion/data.zip download! with following info: \n",
+      "[2025-02-06 08:00:56,815: INFO: common: yaml file: config/config.yaml loaded successfully]\n",
+      "[2025-02-06 08:00:56,818: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2025-02-06 08:00:56,820: INFO: common: yaml file: schema.yaml loaded successfully]\n",
+      "[2025-02-06 08:00:56,820: INFO: common: created directory at: artifacts]\n",
+      "[2025-02-06 08:00:56,821: INFO: common: created directory at: artifacts/data_ingestion]\n",
+      "[2025-02-06 08:00:57,908: INFO: 2366278714: artifacts/data_ingestion/data.zip download! with following info: \n",
       "Connection: close\n",
       "Content-Length: 23329\n",
       "Cache-Control: max-age=300\n",
@@ -197,19 +197,19 @@
       "X-Content-Type-Options: nosniff\n",
       "X-Frame-Options: deny\n",
       "X-XSS-Protection: 1; mode=block\n",
-      "X-GitHub-Request-Id: FEF1:10201E:212D72:27A4B8:6703750E\n",
+      "X-GitHub-Request-Id: DD51:165AB6:17A294:226CFB:67A41EE1\n",
       "Accept-Ranges: bytes\n",
-      "Date: Mon, 07 Oct 2024 05:43:45 GMT\n",
+      "Date: Thu, 06 Feb 2025 02:30:57 GMT\n",
       "Via: 1.1 varnish\n",
-      "X-Served-By: cache-qpg1240-QPG\n",
+      "X-Served-By: cache-hyd1100031-HYD\n",
       "X-Cache: MISS\n",
       "X-Cache-Hits: 0\n",
-      "X-Timer: S1728279825.044617,VS0,VE292\n",
+      "X-Timer: S1738809057.373078,VS0,VE484\n",
       "Vary: Authorization,Accept-Encoding,Origin\n",
       "Access-Control-Allow-Origin: *\n",
       "Cross-Origin-Resource-Policy: cross-origin\n",
-      "X-Fastly-Request-ID: e21ad60a2bdf2ddf9c65ce5be54e418ddb58a98f\n",
-      "Expires: Mon, 07 Oct 2024 05:48:45 GMT\n",
+      "X-Fastly-Request-ID: f060de58157f352a0f8485b88b23c7e17bd8950c\n",
+      "Expires: Thu, 06 Feb 2025 02:35:57 GMT\n",
       "Source-Age: 0\n",
       "\n",
       "]\n"
