--- a/research/02_data_validation.ipynb
+++ b/research/02_data_validation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,16 +11,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'e:\\\\Bappy\\\\Coding\\\\Youtube\\\\Office\\\\End-to-End-Wine-Quality-Prediction\\\\research'"
+       "'/Users/terox/Desktop/ML_PROJECT/End-to-end-Wine-Quality-Predictor/research'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,16 +40,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'e:\\\\Bappy\\\\Coding\\\\Youtube\\\\Office\\\\End-to-End-Wine-Quality-Prediction'"
+       "'/Users/terox/Desktop/ML_PROJECT/End-to-end-Wine-Quality-Predictor'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
        "4      9.4        5  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,18 +370,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-10-07 12:13:14,511: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2024-10-07 12:13:14,512: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2024-10-07 12:13:14,517: INFO: common: yaml file: schema.yaml loaded successfully]\n",
-      "[2024-10-07 12:13:14,518: INFO: common: created directory at: artifacts]\n",
-      "[2024-10-07 12:13:14,518: INFO: common: created directory at: artifacts/data_validation]\n"
+      "[2025-02-07 00:18:30,280: INFO: common: yaml file: config/config.yaml loaded successfully]\n",
+      "[2025-02-07 00:18:30,283: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2025-02-07 00:18:30,286: INFO: common: yaml file: schema.yaml loaded successfully]\n",
+      "[2025-02-07 00:18:30,287: INFO: common: created directory at: artifacts]\n",
+      "[2025-02-07 00:18:30,288: INFO: common: created directory at: artifacts/data_validation]\n"
      ]
     }
    ],
@@ -412,7 +412,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mlproj",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -426,7 +426,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.8.20"
   }
  },
  "nbformat": 4,
