--- a/research/03_data_transformation.ipynb
+++ b/research/03_data_transformation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,16 +11,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'e:\\\\Bappy\\\\Coding\\\\Youtube\\\\Office\\\\End-to-End-Wine-Quality-Prediction\\\\research'"
+       "'/Users/terox/Desktop/ML_PROJECT/End-to-end-Wine-Quality-Predictor/research'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,16 +40,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'e:\\\\Bappy\\\\Coding\\\\Youtube\\\\Office\\\\End-to-End-Wine-Quality-Prediction'"
+       "'/Users/terox/Desktop/ML_PROJECT/End-to-end-Wine-Quality-Predictor'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,21 +167,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-10-07 12:36:23,540: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2024-10-07 12:36:23,541: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2024-10-07 12:36:23,542: INFO: common: yaml file: schema.yaml loaded successfully]\n",
-      "[2024-10-07 12:36:23,543: INFO: common: created directory at: artifacts]\n",
-      "[2024-10-07 12:36:23,544: INFO: common: created directory at: artifacts/data_transformation]\n",
-      "[2024-10-07 12:36:23,574: INFO: 741865018: Splited data into training and test sets]\n",
-      "[2024-10-07 12:36:23,574: INFO: 741865018: (1199, 12)]\n",
-      "[2024-10-07 12:36:23,575: INFO: 741865018: (400, 12)]\n",
+      "[2025-02-07 00:19:07,148: INFO: common: yaml file: config/config.yaml loaded successfully]\n",
+      "[2025-02-07 00:19:07,151: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2025-02-07 00:19:07,154: INFO: common: yaml file: schema.yaml loaded successfully]\n",
+      "[2025-02-07 00:19:07,155: INFO: common: created directory at: artifacts]\n",
+      "[2025-02-07 00:19:07,156: INFO: common: created directory at: artifacts/data_transformation]\n",
+      "[2025-02-07 00:19:07,179: INFO: 741865018: Splited data into training and test sets]\n",
+      "[2025-02-07 00:19:07,179: INFO: 741865018: (1199, 12)]\n",
+      "[2025-02-07 00:19:07,180: INFO: 741865018: (400, 12)]\n",
       "(1199, 12)\n",
       "(400, 12)\n"
      ]
@@ -207,7 +207,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mlproj",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -221,7 +221,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.8.20"
   }
  },
  "nbformat": 4,
