--- a/research/04_model_trainer.ipynb
+++ b/research/04_model_trainer.ipynb
@@ -26,7 +26,7 @@
     {
      "data": {
       "text/plain": [
-       "'e:\\\\Bappy\\\\Coding\\\\Youtube\\\\Office\\\\End-to-End-Wine-Quality-Prediction'"
+       "'/Users/terox/Desktop/ML_PROJECT/End-to-end-Wine-Quality-Predictor'"
       ]
      },
      "execution_count": 3,
@@ -161,11 +161,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-10-08 10:31:52,128: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2024-10-08 10:31:52,142: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2024-10-08 10:31:52,147: INFO: common: yaml file: schema.yaml loaded successfully]\n",
-      "[2024-10-08 10:31:52,148: INFO: common: created directory at: artifacts]\n",
-      "[2024-10-08 10:31:52,149: INFO: common: created directory at: artifacts/model_trainer]\n"
+      "[2025-02-07 00:19:40,563: INFO: common: yaml file: config/config.yaml loaded successfully]\n",
+      "[2025-02-07 00:19:40,565: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2025-02-07 00:19:40,569: INFO: common: yaml file: schema.yaml loaded successfully]\n",
+      "[2025-02-07 00:19:40,570: INFO: common: created directory at: artifacts]\n",
+      "[2025-02-07 00:19:40,571: INFO: common: created directory at: artifacts/model_trainer]\n"
      ]
     }
    ],
@@ -189,7 +189,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mlproj",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -203,7 +203,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.8.20"
   }
  },
  "nbformat": 4,
