--- a/research/05_model_evaluation.ipynb
+++ b/research/05_model_evaluation.ipynb
@@ -26,7 +26,7 @@
     {
      "data": {
       "text/plain": [
-       "'e:\\\\Bappy\\\\Coding\\\\Youtube\\\\Office\\\\End-to-End-Wine-Quality-Prediction'"
+       "'/Users/terox/Desktop/ML_PROJECT/End-to-end-Wine-Quality-Predictor'"
       ]
      },
      "execution_count": 3,
@@ -170,12 +170,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-10-08 10:39:21,296: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2024-10-08 10:39:21,298: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2024-10-08 10:39:21,301: INFO: common: yaml file: schema.yaml loaded successfully]\n",
-      "[2024-10-08 10:39:21,302: INFO: common: created directory at: artifacts]\n",
-      "[2024-10-08 10:39:21,302: INFO: common: created directory at: artifacts/model_evaluation]\n",
-      "[2024-10-08 10:39:21,343: INFO: common: json file saved at: artifacts\\model_evaluation\\metrics.json]\n"
+      "[2025-02-07 00:20:03,047: INFO: common: yaml file: config/config.yaml loaded successfully]\n",
+      "[2025-02-07 00:20:03,050: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2025-02-07 00:20:03,054: INFO: common: yaml file: schema.yaml loaded successfully]\n",
+      "[2025-02-07 00:20:03,055: INFO: common: created directory at: artifacts]\n",
+      "[2025-02-07 00:20:03,056: INFO: common: created directory at: artifacts/model_evaluation]\n",
+      "[2025-02-07 00:20:03,118: INFO: common: json file saved at: artifacts/model_evaluation/metrics.json]\n"
      ]
     }
    ],
@@ -199,7 +199,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mlproj",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -213,7 +213,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.8.20"
   }
  },
  "nbformat": 4,
